--- a/release/Biological.html
+++ b/release/Biological.html
@@ -55,21 +55,20 @@ We are focusing on the following research directions: </p>
 <table class="imgtable"><tr><td>
 <img src="biology_img\\1.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We introduce a particle-filter algorithm for cryo-EM, which provides high-dimensional parameter estimation through a posterior probability density function (PDF) of the parameters given in the model and the experimental image. (Nature methods, vol 15, (2018))</p>
+<li><p>We introduce a particle-filter algorithm for cryo-EM, which provides high-dimensional parameter estimation through a posterior probability density function (PDF) of the parameters given in the model and the experimental image. <br /></p>
+</li>
+<li><p>M. Hu, H. Yu, K. Gu, Z. Wang, H. Ruan, K. Wang, S. Ren, B. Li, L. Gan, S. Xu, G. Yang, Y. Shen, and X. Li, &ldquo;A particle-filter framework for robust cryo-EM 3D reconstruction,&rdquo; Nat. Methods, vol. 15, no. 12, pp. 1083-1089, Dec. 2018.</p>
 </li>
 </ul>
 </td></tr></table>
-<ul>
-<li><p>We propose a general framework for efficiently implementing EM-algorithm in cryo-EM images processing tasks with prior constraint.</p>
-</li>
-<li><p>We propose a Fourier space reconstruction algorithm for cryo-ET, which is faster than SIRT without loss of precision. This algorithm can also solve the effect caused by non-ideal imaging system. 
-<br /></p>
-</li>
-</ul>
 <table class="imgtable"><tr><td>
 <img src="biology_img\\2.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We apply incremental learning to the cryo-EM protein particle picking system and improve the particle picking precision of the proposed method by more than 10%.</p>
+<li><p>We propose a general framework for efficiently implementing EM-algorithm in cryo-EM images processing tasks with prior constraint.</p>
+</li>
+<li><p>We propose a Fourier space reconstruction algorithm for cryo-ET, which is faster than SIRT without loss of precision. This algorithm can also solve the effect caused by non-ideal imaging system. <br /></p>
+</li>
+<li><p>We apply incremental learning to the cryo-EM protein particle picking system and improve the particle picking precision of the proposed method by more than 10%.  </p>
 </li>
 </ul>
 </td></tr></table>
@@ -81,15 +80,15 @@ We are focusing on the following research directions: </p>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="biology_img\\\4.png" alt="alt text" width="400px" />&nbsp;</td>
+<img src="biology_img\\4.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We develope a particle picking software based on CenterNet. This program is able to detect particles, vesicles and filaments in single particle micrographs.</p>
+<li><p>We develope a particle picking software based on CenterNet. This program can generate samples for incremental learning within 2D classification for further discrimination and reconstruction. The optimized pipeline is able to detect particles, vesicles and filaments in single particle micrographs.  </p>
 </li>
 </ul>
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-03 22:10:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-03 17:29:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
